Adds output of Wayback page archive count

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <ia-topnav config='{ "baseUrl": "archive.org", "waybackUrl": "web.archive.org", "screenName": "really_long_screen_name_that_may_be_truncated_on_mobile", "username": "shaneriley", "eventCategory": "MobileTopNav" }'></ia-topnav>
+    <ia-topnav config='{ "baseUrl": "archive.org", "waybackUrl": "web.archive.org", "screenName": "really_long_screen_name_that_may_be_truncated_on_mobile", "username": "shaneriley", "eventCategory": "MobileTopNav", "waybackPagesArchived": "424 billion" }'></ia-topnav>
     <main>
       <h1>Site example</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
