Adds plain text menu item functionality and user menu unit tests

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -31,16 +31,16 @@
     </main>
     <script>
       const config = {
-        baseUrl: "archive.org",
-        waybackUrl: "web.archive.org",
-        screenName: "really_long_screen_name_that_may_be_truncated_on_mobile",
-        username: "shaneriley",
-        eventCategory: "MobileTopNav",
-        waybackPagesArchived: "424 billion",
+        baseUrl: 'archive.org',
+        waybackUrl: 'web.archive.org',
+        screenName: 'really_long_screen_name_that_may_be_truncated_on_mobile',
+        username: 'shaneriley',
+        eventCategory: 'MobileTopNav',
+        waybackPagesArchived: '424 billion',
         isAdmin: true,
-        identifier: "foo",
-        uploader: "bar-uploader@baz.org",
-        biblio: "https://some-url.com"
+        identifier: 'foo',
+        uploader: 'bar-uploader@baz.org',
+        biblio: 'https://some-url.com',
       };
       const topnav = document.createElement('ia-topnav');
       topnav.setAttribute('config', JSON.stringify(config));
