Removes protocol from catalogd URL builder

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -32,7 +32,7 @@
     <script>
       const config = {
         baseUrl: 'archive.org',
-        catUrl: 'catalogd.archive.org',
+        catUrl: 'https://catalogd.archive.org',
         waybackUrl: 'web.archive.org',
         screenName: 'really_long_screen_name_that_may_be_truncated_on_mobile',
         username: 'shaneriley',
