Adds desktop toggle of search options, ability to hide specific search options

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -42,6 +42,7 @@
         identifier: 'foo',
         uploader: 'bar-uploader@baz.org',
         biblio: 'https://some-url.com',
+        hiddenSearchOptions: [],
       };
       const topnav = document.createElement('ia-topnav');
       topnav.setAttribute('config', JSON.stringify(config));
