--- a/packages/donation-form/demo/index.html
+++ b/packages/donation-form/demo/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/client.min.js"></script>
+  <script src="https://js.braintreegateway.com/web/3.62.0/js/client.js"></script>
+  <script src="https://js.braintreegateway.com/web/3.62.0/js/hosted-fields.js"></script>
 </head>
 <body>
   <div id="demo">
@@ -15,7 +16,8 @@
 
     render(
       html`
-        <donation-form>
+        <donation-form
+          .braintree=${window.braintree}>
         </donation-form>
       `,
       document.querySelector('#demo')
