Organize braintree management

--- a/packages/donation-form/demo/index.html
+++ b/packages/donation-form/demo/index.html
@@ -19,7 +19,7 @@
   <script type="module">
     import { html, render } from 'lit-html';
     import '../lib/donation-form.js';
-    import { BraintreeManager } from '../lib/braintree-manager.js';
+    import { BraintreeManager } from '../lib/braintree-manager/braintree-manager.js';
 
     const hostedFieldStyle = {
       input: {
