--- a/packages/donation-form/demo/index.html
+++ b/packages/donation-form/demo/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://js.braintreegateway.com/web/3.62.0/js/client.js"></script>
   <script src="https://js.braintreegateway.com/web/3.62.0/js/hosted-fields.js"></script>
+  <script src="https://js.braintreegateway.com/web/3.62.0/js/apple-pay.js"></script>
 
   <style>
     div[slot='braintree-hosted-fields'] div {
