--- a/packages/donation-form/demo/index.html
+++ b/packages/donation-form/demo/index.html
@@ -6,6 +6,9 @@
   <script src="https://js.braintreegateway.com/web/3.62.0/js/client.js"></script>
   <script src="https://js.braintreegateway.com/web/3.62.0/js/hosted-fields.js"></script>
   <script src="https://js.braintreegateway.com/web/3.62.0/js/apple-pay.js"></script>
+  <script src="https://js.braintreegateway.com/web/3.62.0/js/venmo.js"></script>
+  <script src="https://js.braintreegateway.com/web/3.62.0/js/data-collector.min.js"></script>
+
 
   <style>
     div[slot='braintree-hosted-fields'] div {
