Renames baseUrl and prodUrl

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -30,7 +30,7 @@
     </main>
     <script>
       const config = {
-        baseUrl: 'archive.org',
+        baseHost: 'archive.org',
         catUrl: 'https://catalogd.archive.org',
         waybackUrl: 'web.archive.org',
         screenName: 'really_long_screen_name_that_may_be_truncated_on_mobile',
