Add support for queryparams to change the value

--- a/packages/donation-form/demo/index.html
+++ b/packages/donation-form/demo/index.html
@@ -28,6 +28,9 @@
         <input type="radio" name="amount" value="10" />$10
         <input type="radio" name="amount" value="25" />$25
         <input type="radio" name="amount" value="50" />$50
+        <input type="radio" name="amount" value="100" />$100
+        <input type="radio" name="amount" value="250" />$250
+        <input type="radio" name="amount" value="500" />$500
       </fieldset>
       <input type="submit" />
     </form>
