Get PayPal working, start work on upsell

--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -124,6 +124,10 @@
           <div slot="paypal-button">
             <div id="paypal-button"></div>
           </div>
+
+          <div slot="paypal-upsell-button">
+            <div id="paypal-upsell-button"></div>
+          </div>
         </donation-form>
         <div id="recaptcha"></div>
       `,
