--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -14,8 +14,33 @@
 
 
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    #demo {
+      margin: 0;
+      padding: 0;
+    }
+
     div[slot='braintree-hosted-fields'] div {
       height: 30px;
+    }
+
+    modal-manager {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 250; /* the PayPal button starts off at 200, then drops down to 100 so this is just staying above it */
+    }
+
+    modal-manager[mode='closed'] {
+      display: none;
+    }
+
+    modal-manager[mode='modal'] {
+      display: block;
     }
   </style>
 
@@ -40,6 +65,8 @@
     import { PaymentClients } from '../lib/braintree-manager/payment-clients.js';
     import { BraintreeManager } from '../lib/braintree-manager/braintree-manager.js';
     import { RecaptchaManager } from '../lib/recaptcha-manager.js';
+
+    import '../lib/modals/modal-manager.js';
     import '../lib/donation-form.js';
     import '../lib/re-captcha.js'
 
@@ -98,6 +125,11 @@
 
     render(
       html`
+        <modal-manager .braintreeManager=${braintreeManager}>
+          <div slot="paypal-upsell-button">
+            <div id="paypal-upsell-button"></div>
+          </div>
+        </modal-manager>
         <donation-form
           .braintreeManager=${braintreeManager}
           .recaptchaManager=${recaptchaManager}>
@@ -124,10 +156,6 @@
           <div slot="paypal-button">
             <div id="paypal-button"></div>
           </div>
-
-          <div slot="paypal-upsell-button">
-            <div id="paypal-upsell-button"></div>
-          </div>
         </donation-form>
         <div id="recaptcha"></div>
       `,
@@ -136,6 +164,9 @@
 
     const recaptchaContainer = document.getElementById('recaptcha');
     recaptchaManager.setup({ container: recaptchaContainer, theme: 'light', type: 'image' });
+    const modalManager = document.querySelector('modal-manager');
+    const donationForm = document.querySelector('donation-form');
+    donationForm.modalManager = modalManager;
   </script>
 </body>
 </html>
