PayPal modal flow is mostly working \o/

--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -64,11 +64,10 @@
 
     import { PaymentClients } from '../lib/braintree-manager/payment-clients.js';
     import { BraintreeManager } from '../lib/braintree-manager/braintree-manager.js';
-    import { RecaptchaManager } from '../lib/recaptcha-manager.js';
+    import { RecaptchaManager } from '../lib/recaptcha-manager/recaptcha-manager.js';
 
     import '../lib/modals/modal-manager.js';
     import '../lib/donation-form.js';
-    import '../lib/re-captcha.js'
 
     const hostedFieldStyle = {
       input: {
