Add a startup method to the payment flow handlers
We may need to restart the Venmo flow on page load in case we have received parameters from the Venmo app so this adds a startup method to resume the flow if needed.

--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -176,6 +176,8 @@
       recaptchaManager: recaptchaManager
     });
     donationForm.paymentFlowHandlers = paymentFlowHandlers;
+    braintreeManager.startup();
+    paymentFlowHandlers.startup();
   </script>
 </body>
 </html>
