Add payment selection button images

--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -41,6 +41,18 @@
     modal-manager[mode='modal'] {
       display: block;
     }
+
+    donation-form {
+      --paymentButtonWidth: 50px;
+      --paymentButtonHeight: 32px;
+    }
+
+    #paypal-button {
+      opacity: 0.25;
+      width: 50px;
+      height: 32px;
+      overflow: hidden;
+    }
   </style>
 
   <script>
