--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -3,14 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://www.google.com/recaptcha/api.js"></script>
-  <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4 log-level="warn"></script>
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/client.js"></script>
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/hosted-fields.js"></script>
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/apple-pay.js"></script>
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/venmo.js"></script>
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/data-collector.min.js"></script>
-  <script src="https://js.braintreegateway.com/web/3.62.0/js/paypal-checkout.min.js"></script>
 
   <style>
     body {
@@ -78,6 +70,8 @@
     import { RecaptchaManager } from '../lib/recaptcha-manager/recaptcha-manager.js';
     import { PaymentFlowHandlers } from '../lib/payment-flow-handlers/payment-flow-handlers.js';
 
+    import { LazyLoaderService } from '../lib/utilities/lazy-loader-service.js';
+
     import '../lib/modal-manager/modal-manager.js';
     import '../lib/donation-form.js';
 
@@ -113,25 +107,63 @@
       }
     }
 
-    const endpointManager = new BraintreeEndpointManager();
+    const lazyLoaderService = new LazyLoaderService();
 
-    const paymentClients = new PaymentClients({
-      braintreeLibrary: window.braintree,
-      paypalLibrary: window.paypal
-    });
+    Promise.all([
+      lazyLoaderService.loadScript('https://pay.google.com/gp/p/js/pay.js'),
+      lazyLoaderService.loadScript('https://www.google.com/recaptcha/api.js'),
+      lazyLoaderService.loadScript('https://www.paypalobjects.com/api/checkout.js', undefined, [{key: 'data-version-4', value: ''}, {key: 'log-level', value: 'warn'}]),
+      lazyLoaderService.loadScript('https://js.braintreegateway.com/web/3.62.0/js/client.js'),
+      lazyLoaderService.loadScript('https://js.braintreegateway.com/web/3.62.0/js/hosted-fields.js'),
+      lazyLoaderService.loadScript('https://js.braintreegateway.com/web/3.62.0/js/apple-pay.js'),
+      lazyLoaderService.loadScript('https://js.braintreegateway.com/web/3.62.0/js/venmo.js'),
+      lazyLoaderService.loadScript('https://js.braintreegateway.com/web/3.62.0/js/data-collector.min.js'),
+      lazyLoaderService.loadScript('https://js.braintreegateway.com/web/3.62.0/js/paypal-checkout.min.js'),
+    ]).then((args) => {
+      console.debug('LOADED', window, args);
 
-    const braintreeManager = new BraintreeManager({
-      paymentClients,
-      endpointManager,
-      authorizationToken: window.config.BRAINTREE_KEY,
-      hostedFieldStyle,
-      hostedFieldConfig,
-      hostingEnvironment: 'dev'
-    });
+      const endpointManager = new BraintreeEndpointManager();
 
-    const recaptchaManager = new RecaptchaManager({
-      grecaptchaLibrary: window.grecaptcha,
-      siteKey: window.config.RECAPTCHA_KEY
+      const paymentClients = new PaymentClients({
+        braintreeLibrary: window.braintree,
+        paypalLibrary: window.paypal
+      });
+
+      const braintreeManager = new BraintreeManager({
+        paymentClients,
+        endpointManager,
+        authorizationToken: window.config.BRAINTREE_KEY,
+        hostedFieldStyle,
+        hostedFieldConfig,
+        hostingEnvironment: 'dev'
+      });
+
+      const recaptchaManager = new RecaptchaManager({
+        grecaptchaLibrary: window.grecaptcha,
+        siteKey: window.config.RECAPTCHA_KEY
+      });
+
+      const modalManager = document.querySelector('modal-manager');
+
+      const paymentFlowHandlers = new PaymentFlowHandlers({
+        braintreeManager: braintreeManager,
+        modalManager: modalManager,
+        recaptchaManager: recaptchaManager
+      });
+
+      const recaptchaContainer = document.getElementById('recaptcha');
+      const donationForm = document.querySelector('donation-form');
+
+      donationForm.braintreeManager = braintreeManager;
+      donationForm.modalManager = modalManager;
+      donationForm.paymentFlowHandlers = paymentFlowHandlers;
+
+      console.debug('setup recaptcha', window.grecaptcha.render);
+
+      recaptchaManager.setup({ container: recaptchaContainer, theme: 'light', type: 'image' });
+
+      braintreeManager.startup();
+      paymentFlowHandlers.startup();
     });
 
     render(
@@ -145,8 +177,7 @@
             <div id="paypal-upsell-button"></div>
           </div>
         </modal-manager>
-        <donation-form
-          .braintreeManager=${braintreeManager}>
+        <donation-form>
 
           <!--
             Why are these slots here?
@@ -176,20 +207,6 @@
       document.querySelector('#demo')
     );
 
-    const recaptchaContainer = document.getElementById('recaptcha');
-    recaptchaManager.setup({ container: recaptchaContainer, theme: 'light', type: 'image' });
-    const modalManager = document.querySelector('modal-manager');
-    const donationForm = document.querySelector('donation-form');
-    donationForm.modalManager = modalManager;
-
-    const paymentFlowHandlers = new PaymentFlowHandlers({
-      braintreeManager: braintreeManager,
-      modalManager: modalManager,
-      recaptchaManager: recaptchaManager
-    });
-    donationForm.paymentFlowHandlers = paymentFlowHandlers;
-    braintreeManager.startup();
-    paymentFlowHandlers.startup();
   </script>
 </body>
 </html>
